[tool.poetry]
name = "Auto_Neutron"
version = "2.1.0"
description = "An automatic neutron route plotter for Elite Dangerous"
authors = ["Numerlor <numerlor@gmail.com>"]
license = "GPL-3.0-or-later"

[tool.poetry.dependencies]
python = "3.10.*"

PySide6 = "~6.2.0"
tomli = "~2.0.1"
tomli-w = "~1.0.0"
babel = "~2.9.1"
more-itertools = "~8.12.0"

[tool.poetry.dev-dependencies]
typing-extensions = ">=4.0.1"
pre-commit = "~2.17"
pyinstaller = "~4.9"
taskipy = "~1.9"
python-dotenv = "~0.19.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
atomic = true
profile = "black"
multi_line_output = 3
line_length = 88
include_trailing_comma = true
use_parentheses = true
known_first_party = ["auto_neutron", "__feature__", "delete_dlls", "delete_babel_dat"]

[tool.black]
target-version = ["py310"]

[tool.taskipy.tasks]
start = "python main.py"
lint = "pre-commit run --all-files"
pyside-pyi = "pyside6-genpyi all --feature snake_case true_property"
build = "python -OO pyinstaller_build/build.py"
build-debug = "python pyinstaller_build/build.py"

i18n-init = "pybabel init -i .\\locale\\auto_neutron.pot -d .\\locale -D auto_neutron -l"
i18n-compile = "pybabel compile -d locale -D auto_neutron"
i18n-update = "pybabel update -i .\\locale\\auto_neutron.pot -d .\\locale -D auto_neutron -N"
i18n-extract = "pybabel extract auto_neutron -o locale/auto_neutron.pot -c NOTE"
