[tool.poetry]
name = "Auto_Neutron"
version = "2.2.2"
description = "An automatic neutron route plotter for Elite Dangerous"
authors = ["Numerlor <numerlor@numerlor.me>"]
license = "GPL-3.0-or-later"

[tool.poetry.dependencies]
python = "3.12.*"

PySide6 = "6.7.0"
tomli-w = "1.0.0"
babel = "2.15.0"
more-itertools = "10.2.0"

[tool.poetry.dev-dependencies]
typing-extensions = "4.1.0"
pre-commit = "3.7.0"
pyinstaller = "6.6.0"
taskipy = "1.12.2"
python-dotenv = "1.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
atomic = true
profile = "black"
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "PYSIDE_FEATURE", "FIRSTPARTY", "LOCALFOLDER"]
no_lines_before = ["PYSIDE_FEATURE"]
known_pyside_feature = ["__feature__"]

[tool.black]
target-version = ["py312"]

[tool.taskipy.tasks]
start = "python main.py"
lint = "pre-commit run --all-files"
pyside-pyi = "pyside6-genpyi all --feature snake_case true_property"
build = "python -OO pyinstaller_build/build.py"
build-debug = "python pyinstaller_build/build.py"
convert-icon = "python pyinstaller_build/svg_to_ico.py -i resources/icon.svg -o resources/icons_libary.ico"

i18n-init = "pybabel init -i .\\locale\\auto_neutron.pot -d .\\locale -D auto_neutron -l"
i18n-compile = "pybabel compile -d locale -D auto_neutron"
i18n-update = "pybabel update -i .\\locale\\auto_neutron.pot -d .\\locale -D auto_neutron -N"
i18n-extract = "pybabel extract auto_neutron -o locale/auto_neutron.pot -c NOTE"
